[package]
name = "cofi"
version = "0.3.2"
authors = ["Vsevolod Zubarev <vsevolod.zubarev@veeam.com>"]
edition = "2018"

[dependencies]
rand = "0.7.3"
winapi = { version = "0.3.9", features = ["winbase"] }
log = "0.4.14"
fern = "0.6.0"
chrono = "0.4.19"
libc = "0.2.112"
failure = "0.1.8"
num_cpus = "1.13.1"
crossbeam-channel = "0.4.2"
clap = "2.33.0"
indicatif = "0.14.0"
blake3 = "1.3.0"
