[package]
name = "cofi"
version = "0.3.3"
authors = ["Vsevolod Zubarev <vsevolod.zubarev@veeam.com>"]
edition = "2018"

[dependencies]
rand = "0.8.4"
winapi = { version = "0.3.9", features = ["winbase"] }
log = "0.4.14"
fern = "0.6.0"
chrono = "0.4.19"
libc = "0.2.112"
num_cpus = "1.13.1"
crossbeam-channel = "0.5.2"
clap = "3.0.10"
indicatif = "0.16.2"
blake3 = "1.3.0"
anyhow = "1.0.52"
thiserror = "1.0.30"

[features]
