[package]
name = "cofi"
version = "0.3.3"
authors = ["Vsevolod Zubarev <vsevolod.zubarev@veeam.com>"]
edition = "2018"

[dependencies]
rand = "0.8.5"
winapi = { version = "0.3.9", features = ["winbase"] }
log = "0.4.17"
fern = "0.6.1"
chrono = "0.4.19"
libc = "0.2.126"
num_cpus = "1.13.1"
crossbeam-channel = "0.5.4"
clap = "3.1.18"
indicatif = "0.17.0"
blake3 = "1.3.1"
anyhow = "1.0.57"
thiserror = "1.0.31"

[features]
